# Zlin_ACM

./: .gitignore  CMakeLists.txt  README.md  Zlin的板子大全.md  main.cpp  test.cpp  tmp.md  计算几何收集.md  题目记录.md
Game/: A.cpp  AA.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  PA_std.cpp  PA_std_tle.cpp  PA_stdout.cpp  三分.md  唐人游戏.md  唐人迷宫.md
Game/Food/: gen.cpp  std.cpp  vail.cpp
Game/Fun-Tree/: 1.md  2.md  gen.cpp  gen1.cpp  std.cpp  vail.cpp  wa.cpp
Game/PA_Racing/: PA_WA.cpp  PA_std.cpp  PA_stdout.cpp  PA_vali.cpp  三分.md
Game/Tree/: gen.cpp  std.cpp  std_WA.cpp  vali.cpp
Game/ease-game/: 2.md  gen.cpp  std.cpp  std_WA.cpp  vali.cpp
_Acwing/: 3164.cpp
_Game/: 1.cpp  A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G 2.cpp  L1-1.cpp  L1-2.cpp  L1-3.cpp  L1-4.cpp  L1-5.cpp  L1-6.cpp  L1-7.cpp  L1-8.cpp  L2-1.cpp  L2-2.cpp  L2-3.cpp  L2-4.cpp  L3-1.cpp  L3-2.cpp  b.cpp  c.cpp
_HDU/Other/: 3949.cpp  6579.cpp
_Loj/: 6409.cpp
_Luogu/: ARC155A.cpp  B3642.cpp  P1000.cpp  P1001.cpp  P1004.cpp  P1005.cpp  P1011.cpp  P1012.cpp  P1017.cpp  P1024.cpp  P1031.cpp  P1032.cpp  P1033.cpp  P1038.cpp  P1042.cpp  P1051.cpp  P1056.cpp  P1057.cpp  P1058.cpp  P1061.cpp  P1064.cpp  P1065.cpp  P1067.cpp  P10723.cpp  P10725.cpp  P1076.cpp  P1083.cpp  P1087.cpp  P1090.cpp  P1091.cpp  P1095.cpp  P1096.cpp  P1103.cpp  P1111.cpp  P1111_DSU.cpp  P1113.cpp  P1119.cpp  P1126.cpp  P1127.cpp  P1144.cpp  (+152 more)
_Uoj/: 763.cpp
_test/: AC.cpp  WA.cpp  a  b  data  data.cpp  data.txt  duipai  duipai.cpp  gen.cpp  ggen.cpp  spj.cpp  std.cpp  tle.cpp  vali.cpp  z
check/: AC.cpp  Main.cpp  WA.cpp  data.cpp
(+1136 files in other folders)
