cmake_minimum_required(VERSION 3.29)
project(Zlin_ACM)

set(CMAKE_CXX_STANDARD 23)


add_executable(C "_CF/GYM/2023 (ICPC) Jiangxi Provincial Contest -- Official Contest/C.cpp")
add_executable(J "_CF/GYM/2023 (ICPC) Jiangxi Provincial Contest -- Official Contest/J.cpp")
add_executable(B "_CF/GYM/2023 (ICPC) Jiangxi Provincial Contest -- Official Contest/B.cpp")