cmake_minimum_required(VERSION 3.29)
project(Zlin_ACM)

set(CMAKE_CXX_STANDARD 23)

add_executable(1004 "_HDU/25 Summer/3/1004.cpp")
add_executable(1012 "_HDU/25 Summer/3/1012.cpp")
add_executable(WA check/WA.cpp)
add_executable(AC check/AC.cpp)
add_executable(data check/data.cpp)
add_executable(Main check/Main.cpp)