cmake_minimum_required(VERSION 3.29)
project(Zlin_ACM)

set(CMAKE_CXX_STANDARD 23)

add_executable(main main.cpp)
add_executable(M "_CF/GYM/2022 China Collegiate Programming Contest (CCPC) Guangzhou Onsite/M.cpp")
add_executable(MM "_CF/GYM/2022 China Collegiate Programming Contest (CCPC) Guangzhou Onsite/MM.cpp")